@@ -1,41 +1,36 @@
 package com.textr.filebuffer;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.ArrayDeque;
+import java.util.Deque;
 
 public final class ChangeHistory {
 
-    private final List<Action> undoAbles;
-    private final List<Action> redoAbles;
+    private final Deque<Action> undoAbles;
+    private final Deque<Action> redoAbles;
 
     public ChangeHistory(){
-        this.undoAbles = new ArrayList<>();
-        this.redoAbles = new ArrayList<>();
+        this.undoAbles = new ArrayDeque<>();
+        this.redoAbles = new ArrayDeque<>();
     }
 
-    public void addInsertAction(int index, char character){
-        undoAbles.add(new InsertAction(index, character));
+    public void executeAndAddAction(Action action, ICursor cursor){
+        action.execute(cursor);
+        undoAbles.add(action);
     }
 
-    public void addDeleteAction(int index, char character){
-        undoAbles.add(new DeleteAction(index, character));
-    }
-
-    public void undo(IText text, ICursor cursor){
+    public void undo(ICursor cursor){
         if(undoAbles.size() == 0)
             return;
-        Action action = undoAbles.get(undoAbles.size() - 1);
-        action.undo(text, cursor);
-        undoAbles.remove(undoAbles.size() - 1);
-        redoAbles.add(action);
+        Action action = undoAbles.removeLast();
+        action.undo(cursor);
+        redoAbles.addLast(action);
     }
 
-    public void redo(IText text, ICursor cursor){
+    public void redo(ICursor cursor){
         if(redoAbles.size() == 0)
             return;
-        Action action = redoAbles.get(redoAbles.size() - 1);
-        action.execute(text, cursor);
-        redoAbles.remove(redoAbles.size() - 1);
-        undoAbles.add(action);
+        Action action = redoAbles.removeLast();
+        action.execute(cursor);
+        undoAbles.addLast(action);
     }
 }
